--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,34 @@
     margin-top: 15px;
 }
 
+.load {
+  margin-top: 50px;
+  margin-bottom: 100px;
+  width: 30%;
+}
+
+.movie-bg {
+  height: 95vh;
+  background-size: cover;
+}
+
+.movie-container {
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  margin: auto;
+  width: 80%;
+}
+
+.tag {
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.movie-info {
+  padding: 10px;
+  height: 95vh;
+}
+
 .poster {
   width: 100%;
 }
