--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,12 @@
 .nav-wrapper {
-    background-color: #000;
+    background-color: #334b48;
 }
+
+.center {
+  margin-top: 80px;
+  align-content: center;
+}
+
 
 .col {
     height: 100%;
