--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,21 @@
     margin-top: 15px;
 }
 
+.card {
+  margin-bottom: 30px;
+}
+.search-section {
+  width: 70%;
+  margin: 50px auto;
+}
+.load-more {
+  margin: 20px auto 50px;
+  display: flex;
+}
+.btn-lg {
+  margin: auto;
+}
+
 .actor {
   height: 300px;
 }
@@ -33,6 +48,7 @@
   color: white;
   margin: auto;
   width: 80%;
+  height: 90vh;
 }
 
 .card-image {
@@ -50,7 +66,7 @@
 }
 
 .poster {
-  width: 100%;
+  height: 85vh;
 }
 
 .box {
@@ -60,12 +76,12 @@
 }
 
 .hero {
-    height: 80vh;
+    height: 90vh;
     display: flex;
     padding-left: 30px;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-position: top !important;
+    background-size: cover !important;
+    background-repeat: no-repeat !important;
     margin-bottom: 100px;
   }
   .hero-inner {
